--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: "ubuntu-24.04"
+    runs-on: "ubuntu-latest"
     concurrency:
       group: "${{ github.workflow }}-${{ github.ref }}"
     steps:
@@ -17,13 +17,13 @@ jobs:
       - name: "Set up Hugo"
         uses: "peaceiris/actions-hugo@75d2e84710de30f6ff7268e08f310b60ef14033f" # v3.0.0
         with:
-          hugo-version: "0.111.3"
+          hugo-version: "0.145.0"
           extended: true
 
       - name: "Set up Node.js"
         uses: "actions/setup-node@1d0ff469b7ec7b3cb9d8673fde0c81c44821de2a" # v4.2.0
         with:
-          node-version: 18
+          node-version: "latest"
 
       - name: "Install npm dependencies"
         run: "npm ci"
