chore: remove Stylelint

--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
   "devDependencies": {
     "@prettier/plugin-xml": "3.4.1",
     "prettier": "3.5.3",
-    "prettier-plugin-go-template": "0.0.15",
-    "stylelint": "16.2.1",
-    "stylelint-config-standard-scss": "13.0.0",
-    "stylelint-order": "6.0.4"
+    "prettier-plugin-go-template": "0.0.15"
   }
 }
