--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@prettier/plugin-xml": "3.4.1",
+    "lefthook": "^2.0.2",
     "prettier": "3.5.3",
     "prettier-plugin-go-template": "0.0.15"
   }
