--- a/config/_default/hugo.yml
+++ b/config/_default/hugo.yml
@@ -19,17 +19,17 @@ menu:
   links:
     - identifier: "twitter"
       name: "X (Twitter)"
-      url: "https://twitter.com/sitdigicre"
+      url: "https://x.com/sitdigicre"
       weight: 10
     - identifier: "youtube"
       name: "YouTube"
       url: "https://www.youtube.com/@sitdigicre"
       weight: 20
-    - identifier: "line"
-      name: "LINE オープンチャット"
-      url: "https://line.me/ti/g2/UfhEOyteJRjyQLm-c9Mmhj_9wvIKCBDEohh_WQ"
-      weight: 30
-    - identifier: "digicre"
+    # - identifier: "line"
+    #   name: "LINE オープンチャット"
+    #   url: "https://line.me/ti/g2/UfhEOyteJRjyQLm-c9Mmhj_9wvIKCBDEohh_WQ"
+    #   weight: 30
+    # - identifier: "digicre"
       name: "ウェブサイト"
       url: "https://digicre.net"
       weight: 40
