--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,16 +23,20 @@ jobs:
       - name: "Set up Node.js"
         uses: "actions/setup-node@1d0ff469b7ec7b3cb9d8673fde0c81c44821de2a" # v4.2.0
         with:
-          node-version: "latest"
+          node-version: "24"
+          cache: "pnpm"
 
-      - name: "Install npm dependencies"
-        run: "npm ci"
+      - name: "Enable pnpm"
+        run: "corepack enable"
+
+      - name: "Install pnpm dependencies"
+        run: "pnpm install --frozen-lockfile"
 
       - name: "Format codes"
-        run: "npm run format"
+        run: "pnpm run format"
 
       - name: "Build"
-        run: "npm run build"
+        run: "pnpm run build"
 
       - name: "Deploy"
         uses: "peaceiris/actions-gh-pages@4f9cc6602d3f66b9c108549d475ec49e8ef4d45e" # v4.0.0
